[gd_scene load_steps=3 format=3 uid="uid://bw85vpo4wndfv"]

[ext_resource type="Script" uid="uid://dmcxd0qn1hn6x" path="res://scenes/item/bg/PowerArea.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(128, 128)

[node name="PowerArea" type="Node2D"]
script = ExtResource("1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.254902, 0.509804, 1, 0.196078)
polygon = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[node name="Corner" type="Marker2D" parent="."]
position = Vector2(64, -64)

[node name="Lightning" type="Polygon2D" parent="Corner"]
position = Vector2(-26, 33)
rotation = 0.698931
color = Color(0.928106, 0.980469, 0.0229797, 1)
offset = Vector2(-200, 64)
polygon = PackedVector2Array(206.336, -79.7752, 205.701, -47.8911, 214.888, -55.6119, 210.58, -14.1095, 206.377, -39.3154, 199.61, -34.9337, 194.763, -60.9051, 190.048, -55.6358, 183.671, -80.3204)

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
